--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     <div class="cloud cloud1"></div>
     <div class="cloud cloud2"></div>
     <div class="container">
-        <h1 style="font-size: 7vw;">Wild and Smile</h1>
-        <p style="font-size: 4vw;">天気が良い日は外へ出よう！</p>
+        <h1 style="font-size: 7vw;">Let’ｓ　はらわた！！</h1>
+        <p style="font-size: 4vw;">土用なパズル</p>
         <div id="puzzle" class="grid"></div>
         <button id="startButton">スタート</button>
         <p id="message" style="font-size: 5vw; font-weight: bold; color: #4CAF50;"></p>
@@ -95,7 +95,7 @@
 
     <script>
     document.addEventListener('DOMContentLoaded', function() {
-        const characters = ['ト', 'ヨ', 'タ', '白', '川', '郷', '自', '然', '学', '校', 'で', '心', 'の', '洗', '濯', ''];
+        const characters = ['土', '用', 'の', '丑', 'に', 'は', 'ら', 'わ', 'た', '餅', 'を', '食', 'べ', 'よ', 'う', ''];
         let tiles = [...characters];
         let isStarted = false;
         let movingTile = null;
@@ -146,7 +146,7 @@
                     if (isSolved()) {
                         document.getElementById('message').textContent = 'おめでとう、さあ楽しもう';
                         setTimeout(() => {
-                            window.location.href = 'https://toyota.eco-inst.jp/';
+                            window.location.href = 'https://youtu.be/GEeahvo8_OY';
                         }, 5000);
                     }
                 }, 500);
