--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="cloud cloud2"></div>
     <div class="container">
         <h1 style="font-size: 7vw;">Let’ｓ　はらわた！！</h1>
-        <p style="font-size: 4vw;">土用なパズル</p>
+        <p style="font-size: 4vw;">「土用の丑にはらわた餅を食べよう」</p>
         <div id="puzzle" class="grid"></div>
         <button id="startButton">スタート</button>
         <p id="message" style="font-size: 5vw; font-weight: bold; color: #4CAF50;"></p>
