--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     if (isSolved()) {
                         document.getElementById('message').textContent = 'おめでとう、スペシャル映像スタート！';
                         setTimeout(() => {
-                            window.location.href = 'https://youtu.be/BMQTipnhKec';
+                            window.location.href = 'https://youtu.be/GEeahvo8_OY';
                         }, 5000);
                     }
                 }, 500);
